Reworked installation to work per branch

--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -1,15 +1,10 @@
-FROM ubuntu:18.04 ##This should be per target architecture, including oddball for nvidia support 
-## Options are:
-##  ubuntu:18.04
-##  nvidia/opengl:base-ubuntu18.04
-##  arm32v7/ubuntu:18.04
+FROM nvidia/opengl:base-ubuntu18.04
 
-
-#ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES},display ##Required for nvidia
+ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES},display
 
 ENV LANG C.UTF-8
 
-#RUN dpkg --add-architecture i386 ##Required for wine and PCSX2
+RUN dpkg --add-architecture i386
 
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y \
       ca-certificates git lsb-release sudo \
@@ -19,20 +14,18 @@ RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -
       vim \
       mesa-utils \
       libcap2-bin \
+      wine-stable \
       tzdata \
       usbutils \
       nano \
       python-usb \
-      software-properties-common \
-      #wine-stable ##Enable for wine on amd64
+      software-properties-common && apt-get clean
 
 RUN ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && dpkg-reconfigure --frontend noninteractive tzdata
 
 # Installs PCSX2 daily from PPA
 
-#RUN add-apt-repository ppa:pcsx2-team/pcsx2-daily -y ##Enable for PCSX2 on amd64
-
-#RUN apt-get install -y pcsx2-unstable ##Enable for PCSX2 on amd64
+RUN add-apt-repository ppa:pcsx2-team/pcsx2-daily -y && apt-get install -y pcsx2-unstable && apt-get clean
 
 RUN useradd -d /home/pi -G sudo -m pi
 
@@ -45,14 +38,18 @@ USER pi
 RUN git clone --depth=1 https://github.com/RetroPie/RetroPie-Setup.git
 RUN cd RetroPie-Setup \
     && sudo chmod +x retropie_setup.sh \
-    && sudo ./retropie_packages.sh setup basic_install
+    && sudo ./retropie_packages.sh setup basic_install \
+    && sudo rm -rf /home/pi/RetroPie-Setup/tmp/ \
+    && sudo apt-get clean
     
 # and Installs RetroPie + optional modules declared in install.sh
 COPY --chown=pi install_retropie_addons.sh /tmp/install_retropie_addons.sh
 COPY --chown=pi addons.cfg /tmp/addons.cfg
 COPY --chown=pi post_install.sh /tmp/post_install.sh
 
-RUN bash /tmp/install_retropie_addons.sh
+RUN bash /tmp/install_retropie_addons.sh \
+    && sudo rm -rf /home/pi/RetroPie-Setup/tmp/ \
+    && sudo apt-get clean
 
 # Install USB controller resetting utility
 COPY utilities/reset_controller.py /opt/retropie/configs/all/reset_controller.py
